# FCNet

./: .gitignore  CMakeLists.txt  README.md
dataset/: test.csv
include/: Convert_to_grayscale.h  Dense.h  Frame.h  Linearalgebra.h  Relu_dense.h  Sigmoid.h  Softmax_dense.h  read_csv.h
src/: Dense.cpp  Frame.cpp  Linearalgebra.cpp  Relu_dense.cpp  Sigmoid.cpp  Softmax_dense.cpp  main.cpp  read_csv.cpp
